Update TODO.txt to add new tasks for Mac OS support, custom shortcuts, custom modes, and pause recording

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,6 @@ To Do list:
 - Separate Classes (Done)
 - Fix Calling api at start of the app (Done)
 - Mac OS Support
+- Custom Shortcut
+- Custom Mode
+- Pause Recording
